--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,6 +6,8 @@ layout: archive
 
 <h3 class="archive__subtitle">{{ site.data.ui-text[site.locale].recent_posts | default: "Recent Posts" }}</h3>
 
+<p>I am a third-year PhD student in Information Systems at KAIST College of Business.</p>
+
 {% if paginator %}
   {% assign posts = paginator.posts %}
 {% else %}
