--- a/_sass/minimal-mistakes/_archive.scss
+++ b/_sass/minimal-mistakes/_archive.scss
@@ -170,29 +170,15 @@
   @include breakpoint($medium) {
     margin-left: 0; /* override margin*/
     margin-right: 0; /* override margin*/
-    width: span(3 of 12);
+    width: span(6 of 12);
 
     &:nth-child(2n + 1) {
       clear: none;
     }
 
-    &:nth-child(4n + 1) {
-      clear: both;
-    }
-
-    &:nth-child(4n + 2) {
+    &:nth-child(2n + 2) {
       clear: none;
-      margin-left: gutter(1 of 12);
-    }
-
-    &:nth-child(4n + 3) {
-      clear: none;
-      margin-left: gutter(1 of 12);
-    }
-
-    &:nth-child(4n + 4) {
-      clear: none;
-      margin-left: gutter(1 of 12);
+      margin-left: gutter(of 12);
     }
   }
 
@@ -229,7 +215,7 @@
     }
 
     @include breakpoint($medium) {
-      max-height: 120px;
+      max-height: 300px;
     }
   }
 }
